fixing up suggested tweet toggle visible

--- a/app/assets/stylesheets/single.sass
+++ b/app/assets/stylesheets/single.sass
@@ -278,6 +278,8 @@
 					height: 70px
 				.help
 					font-size: 80%
+				label:hover
+					text-decoration: underline
 			.more
 				display: none
 				font-size: 60%
